@@ -82,3 +82,4 @@ v 1.6:
 	- Added file details in error messages for loading groups/users.
 v 1.7:
 	- GM now supports offline players without having to mantogglevalidate
+	- Offline player checks now support partial name matches.
